CSS / HTML update

--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -160,6 +160,9 @@
 		</p>
 
 
+<!-- "tweede scene vanaf 1 minuut 28" -->
+
+
 		<p class="">Cells</p>
 		<p class="">-Cells</p>
 		<p class="">Have you ever been in an institution. Cells</p>
