--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -14,27 +14,42 @@
 
 	<div id="closed-captions">
 
+		<!-- p0 -->
 		<p class="voice1">
 			Officer "K D 6 - 3 . 7." Let’s begin. Ready?
 		</p>
+
+		<!-- p1 -->
 		<p class="voice2">
 			Yes, sir
 		</p>
+
+		<!-- p2 -->
 		<p class="voice1">
 			Recite your baseline.
 		</p>
+
+		<!-- p3 -->
 		<p class="voice2">
 			And blood-black nothingness began to spin
 		</p>
+
+		<!-- p4 -->
 		<p class="voice2">
-			A system of cells interlinked within cells,
+			A system of cells -interlinked- within cells,
 		</p>
+
+		<!-- p5 -->
 		<p class="voice2">
-			interlinked within cells, interlinked within one stem.
+			-interlinked- within cells, -interlinked- within one stem.
 		</p>
+
+		<!-- p6 -->
 		<p class="voice3">
 			*Fuck off, skin-job!*
 		</p>
+
+		<!-- p7 -->
 		<p class="voice2">
 			And dreadfully distinct against the dark, a tall white fountain played...
 		</p>
@@ -72,79 +87,79 @@
 			Cells.
 		</p>
 		<p class="voice1">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice1">
 			What's it like to hold the hand of someone you love?
 		</p>
 		<p class="voice1">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice1">
 			Did they teach you how to feel, finger to finger?
 		</p>
 		<p class="voice1">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice1">
-			Do you long for having your heart interlinked?
+			Do you long for having your heart -interlinked-?
 		</p>
 		<p class="voice1">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice1">
-			Do you dream about being interlinked?
+			Do you dream about being -interlinked-?
 		</p>
 		<p class="voice2">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice1">
 			What's it like to hold your child in your arms?
 		</p>
 		<p class="voice1">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice1">
 			Do you feel that there's a part of you that's missing?
 		</p>
 		<p class="voice1">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			-interlinked-.
 		</p>
 		<p class="voice1">
-			Within cells interlinked.
+			Within cells -interlinked-.
 		</p>
 		<p class="voice2">
-			Within cells interlinked.
+			Within cells -interlinked-.
 		</p>
 		<p class="voice1">
-			Why don't you say that three times: "within cells interlinked"
+			Why don't you say that three times: "within cells -interlinked-"
 		</p>
 		<p class="voice2">
-			Within cells interlinked.
+			Within cells -interlinked-.
 		</p>
 		<p class="voice2">
-			Within cells interlinked.
+			Within cells -interlinked-.
 		</p>
 		<p class="voice2">
-			Within cells interlinked.
+			Within cells -interlinked-.
 		</p>
 		<p class="voice4">
 			We're done.
@@ -169,11 +184,11 @@
 		<p class="">-Cells</p>
 		<p class="">When you're not performing your duties, do they keep you in a little box? Cells.</p>
 		<p class="">-Cells</p>
-		<p class="">Interlinked. What’s it like to hold the hand of someone you love?</p>
-		<p class="">-Interlinked </p>
-		<p class="">-Interlinked</p>
-		<p class="">Within cells interlinked</p>
-		<p class="">-Within cells interlinked</p>
+		<p class="">-interlinked-. What’s it like to hold the hand of someone you love?</p>
+		<p class="">--interlinked- </p>
+		<p class="">--interlinked-</p>
+		<p class="">Within cells -interlinked-</p>
+		<p class="">-Within cells -interlinked-</p>
 		<p class="">Dreadfully</p>
 		<p class="">-Dreadfully</p>
 		<p class="">What's it like to be filled with dread? Dreadfully</p>
@@ -184,8 +199,8 @@
 		<p class="">-Dreadfully distinct</p>
 		<p class="">Dark</p>
 		<p class="">-Dark</p>
-		<p class="">Within cells interlinked</p>
-		<p class="">-Within cells interlinked</p>
+		<p class="">Within cells -interlinked-</p>
+		<p class="">-Within cells -interlinked-</p>
 		<p class="">Withing one stem</p>
 		<p class="">-Withing one stem</p>
 		<p class="">And dreadfully distinct</p>
