--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -36,12 +36,12 @@
 
 		<!-- p4 -->
 		<p class="voice2">
-			A system of cells -interlinked- within cells,
+			A system of cells interlinked within cells,
 		</p>
 
 		<!-- p5 -->
 		<p class="voice2">
-			-interlinked- within cells, -interlinked- within one stem.
+			interlinked within cells, interlinked within one stem.
 		</p>
 
 		<!-- p6 -->
@@ -53,7 +53,8 @@
 		<p class="voice2">
 			And dreadfully distinct against the dark, a tall white fountain played...
 		</p>
-		<p class="voice1">
+		<!-- p8 -->
+		<p class="voice1 cells">
 			Cells.
 		</p>
 		<p class="voice2">
@@ -62,7 +63,7 @@
 		<p class="voice1">
 			Have you ever been in an institution?
 		</p>
-		<p class="voice1">
+		<p class="voice1 cells">
 			Cells.
 		</p>
 		<p class="voice2">
@@ -71,7 +72,7 @@
 		<p class="voice1">
 			Do they keep you in a cell?
 		</p>
-		<p class="voice1">
+		<p class="voice1 cells">
 			Cells.
 		</p>
 		<p class="voice2">
@@ -80,86 +81,86 @@
 		<p class="voice1">
 			When you're not performing your duties, do they keep you in a little box?
 		</p>
-		<p class="voice1">
+		<p class="voice1 cells">
 			Cells.
 		</p>
 		<p class="voice2">
 			Cells.
 		</p>
-		<p class="voice1">
-			-interlinked-.
+		<p class="voice1 interlinked">
+			interlinked.
 		</p>
 		<p class="voice2">
-			-interlinked-.
+			interlinked.
 		</p>
 		<p class="voice1">
 			What's it like to hold the hand of someone you love?
 		</p>
-		<p class="voice1">
-			-interlinked-.
+		<p class="voice1 interlinked">
+			Interlinked.
 		</p>
 		<p class="voice2">
-			-interlinked-.
+			Interlinked.
 		</p>
 		<p class="voice1">
 			Did they teach you how to feel, finger to finger?
 		</p>
-		<p class="voice1">
-			-interlinked-.
+		<p class="voice1 interlinked">
+			Interlinked.
 		</p>
 		<p class="voice2">
-			-interlinked-.
+			Interlinked.
 		</p>
 		<p class="voice1">
-			Do you long for having your heart -interlinked-?
+			Do you long for having your heart interlinked?
 		</p>
-		<p class="voice1">
-			-interlinked-.
+		<p class="voice1 interlinked">
+			Interlinked.
 		</p>
 		<p class="voice2">
-			-interlinked-.
+			Interlinked.
 		</p>
 		<p class="voice1">
-			Do you dream about being -interlinked-?
+			Do you dream about being interlinked?
 		</p>
 		<p class="voice2">
-			-interlinked-.
+			interlinked.
 		</p>
 		<p class="voice1">
 			What's it like to hold your child in your arms?
 		</p>
-		<p class="voice1">
-			-interlinked-.
+		<p class="voice1  interlinked">
+			Interlinked.
 		</p>
 		<p class="voice2">
-			-interlinked-.
+			Interlinked.
 		</p>
 		<p class="voice1">
 			Do you feel that there's a part of you that's missing?
 		</p>
-		<p class="voice1">
-			-interlinked-.
+		<p class="voice1 interlinked">
+			Interlinked.
 		</p>
 		<p class="voice2">
-			-interlinked-.
-		</p>
-		<p class="voice1">
-			Within cells -interlinked-.
-		</p>
-		<p class="voice2">
-			Within cells -interlinked-.
+			Interlinked.
 		</p>
 		<p class="voice1">
-			Why don't you say that three times: "within cells -interlinked-"
+			Within cells interlinked.
 		</p>
 		<p class="voice2">
-			Within cells -interlinked-.
+			Within cells interlinked.
+		</p>
+		<p class="voice1">
+			Why don't you say that three times: "within cells interlinked"
 		</p>
 		<p class="voice2">
-			Within cells -interlinked-.
+			Within cells interlinked.
 		</p>
 		<p class="voice2">
-			Within cells -interlinked-.
+			Within cells interlinked.
+		</p>
+		<p class="voice2">
+			Within cells interlinked.
 		</p>
 		<p class="voice4">
 			We're done.
@@ -185,8 +186,8 @@
 <p class="voice1">When you're not performing your duties, do they keep you in a little box? Cells.</p>
 <p class="voice2">-Cells</p>
 <p class="voice1">Interlinked. What’s it like to hold the hand of someone you love?</p>
-<p class="voice1">-Interlinked </p>
-<p class="voice2">-Interlinked</p>
+<p class="voice1 interlinked">-Interlinked </p>
+<p class="voice2 interlinked">-Interlinked</p>
 <p class="voice1">Within cells interlinked</p>
 <p class="voice2">-Within cells interlinked</p>
 <p class="voice1">Dreadfully</p>
