--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Closed Captions</title>
+	<title>Closed Captions]</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://fonts.typotheque.com/WF-023273-010687.css">
 	<link rel="stylesheet" href="css.css">
@@ -14,205 +14,212 @@
 
 	<div id="closed-captions">
 
-		<!-- p0 -->
-		<p class="voice1">
-			Officer "K D 6 - 3 . 7." Let’s begin. Ready?
-		</p>
+		<!-- ================================================ -->
+		<!-- 									Eerste scene							 			-->
+		<!-- ================================================ -->
 
-		<!-- p1 -->
-		<p class="voice2">
-			Yes, sir
-		</p>
+		  <!--captions0-->
+			 <p class="voice1">(Intercome) Officer K D 6 - 3 . 7. Let’s begin. Ready?</p>
+			 <!--captions1-->
+			 <p class="voice2">(Officer K) Yes, sir</p>
+			 <!--captions2-->
+			 <p class="voice1">(Intercome) Recite your baseline.</p>
+			 <!--captions3-->
+			 <p class="voice2">(Officer K) And blood-black nothingness began to spin</p>
+			 <!--captions4-->
+			 <p class="voice2">(Officer K) A system of cells interlinked within cells,</p>
+			 <!--captions5-->
+			 <p class="voice2">(Officer K) interlinked within cells, interlinked within one stem.</p>
+			 <!--captions6-->
+			 <p class="voice3">(Passer-by) Fuck off, skin-job!</p>
+			 <!--captions7-->
+			 <p class="voice2">(Officer K) And dreadfully distinct against the dark, a tall white fountain played...</p>
+			 <!--captions8-->
+			 <p class="voice1">(Intercome) Cells.</p>
+			 <!--captions9-->
+			 <p class="voice2">(Intercome) Cells.</p>
+			 <!--captions10-->
+			 <p class="voice1">(Intercome) Have you ever been in an institution?</p>
+			 <!--captions11-->
+			 <p class="voice1">(Intercome) Cells.</p>
+			 <!--captions12-->
+			 <p class="voice2">(Officer K) Cells.</p>
+			 <!--captions13-->
+			 <p class="voice1">(Intercome) Do they keep you in a cell?</p>
+			 <!--captions14-->
+			 <p class="voice1">(Intercome) Cells.</p>
+			 <!--captions15-->
+			 <p class="voice2">(Officer K) Cells.</p>
+			 <!--captions16-->
+			 <p class="voice1">(Intercome) When you're not performing your duties, do they keep you in a little box?</p>
+			 <!--captions17-->
+			 <p class="voice1">(Intercome) Cells.</p>
+			 <!--captions18-->
+			 <p class="voice2">(Officer K) Cells.</p>
+			 <!--captions19-->
+			 <p class="voice1">(Intercome) Interlinked.</p>
+			 <!--captions20-->
+			 <p class="voice2">(Officer K) Interlinked.</p>
+			 <!--captions21-->
+			 <p class="voice1">(Intercome) What's it like to hold the hand of someone you love?</p>
+			 <!--captions22-->
+			 <p class="voice1">(Intercome) Interlinked.</p>
+			 <!--captions23-->
+			 <p class="voice2">(Officer K) Interlinked.</p>
+			 <!--captions24-->
+			 <p class="voice1">(Intercome) Did they teach you how to feel, finger to finger?</p>
+			 <!--captions25-->
+			 <p class="voice1">(Intercome) Interlinked.</p>
+			 <!--captions26-->
+			 <p class="voice2">(Officer K) Interlinked.</p>
+			 <!--captions27-->
+			 <p class="voice1">(Intercome) Do you long for having your heart interlinked?</p>
+			 <!--captions28-->
+			 <p class="voice1">(Intercome) Interlinked.</p>
+			 <!--captions29-->
+			 <p class="voice2">(Officer K) Interlinked.</p>
+			 <!--captions30-->
+			 <p class="voice1">(Intercome) Do you dream about being interlinked?</p>
+			 <!--captions31-->
+			 <p class="voice2">(Officer K) Interlinked.</p>
+			 <!--captions32-->
+			 <p class="voice1">(Intercome) What's it like to hold your child in your arms?</p>
+			 <!--captions33-->
+			 <p class="voice1">(Intercome) Interlinked.</p>
+			 <!--captions34-->
+			 <p class="voice2">(Officer K) Interlinked.</p>
+			 <!--captions35-->
+			 <p class="voice1">(Intercome) Do you feel that there's a part of you that's missing?</p>
+			 <!--captions36-->
+			 <p class="voice1">(Intercome) Interlinked.</p>
+			 <!--captions37-->
+			 <p class="voice2">(Officer K) Interlinked.</p>
+			 <!--captions38-->
+			 <p class="voice1">(Intercome) Within cells interlinked.</p>
+			 <!--captions39-->
+			 <p class="voice2">(Officer K) Within cells interlinked.</p>
+			 <!--captions40-->
+			 <p class="voice1">(Intercome) Why don't you say that three times: "within cells interlinked"</p>
+			 <!--captions41-->
+			 <p class="voice2">(Officer K) Within cells interlinked.</p>
+			 <!--captions42-->
+			 <p class="voice2">(Officer K) Within cells interlinked.</p>
+			 <!--captions43-->
+			 <p class="voice2">(Officer K) Within cells interlinked.</p>
+			 <!--captions44-->
+			 <p class="voice4">(Intercome) We're done.</p>
+			 <!--captions45-->
+		   <p class="voice4">(Intercome) [sighs softly] Constant K.</p>
+			 <!--captions46-->
+			 <p class="voice4">(Intercome) You can pick up your bonus.</p>
+			 <!--captions47-->
+			 <p class="voice2">(Officer K) Thank you, sir.</p>
 
-		<!-- p2 -->
-		<p class="voice1">
-			Recite your baseline.
-		</p>
+		<!-- =====================einde====================== -->
 
-		<!-- p3 -->
-		<p class="voice2">
-			And blood-black nothingness began to spin
-		</p>
+		<!-- ================================================ -->
+		<!-- 				Tweede scene vanaf 1 minuut 28			 			-->
+		<!-- ================================================ -->
 
-		<!-- p4 -->
-		<p class="voice2">
-			A system of cells interlinked within cells,
-		</p>
+			<!--captions48-->
+			<p class="voice1">(Intercome) Cells.</p>
+			<!--captions49-->
+			<p class="voice2">(Officer K) Cells.</p>
+			<!--captions50-->
+			<p class="voice1">(Intercome) Have you ever been in an institution. Cells.</p>
+			<!--captions51-->
+			<p class="voice2">(Officer K) Cells.</p>
+			<!--captions52-->
+			<p class="voice1">(Intercome) When you're not performing your duties, do they keep you in a little box? Cells.</p>
+			<!--captions53-->
+			<p class="voice2">(Officer K) Cells.</p>
+			<!--captions54 (deze weg)-->
+			<p class="voice1">(Intercome) Interlinked. What’s it like to hold the hand of someone you love?</p>
+			<!--captions55-->
+			<p class="voice1">(Intercome) Interlinked.</p>
+			<!--captions56-->
+			<p class="voice2">(Officer K) Interlinked.</p>
+			<!--captions57-->
+			<p class="voice1">(Intercome) Within cells interlinked.</p>
+			<!--captions58-->
+			<p class="voice2">(Officer K) Within cells interlinked.</p>
+			<!--captions59-->
+			<p class="voice1">(Intercome) Dreadfully.</p>
+			<!--captions60-->
+			<p class="voice2">(Officer K) Dreadfully.</p>
+			<!--captions61-->
+			<p class="voice1">(Intercome) What's it like to be filled with dread? Dreadfully.</p>
+			<!--captions62-->
+			<p class="voice2">(Officer K) Dreadfully.</p>
+			<!--captions63-->
+		 	<p class="voice1">(Intercome) Do you like being separated from other people? Distinct.</p>
+			<!--captions64-->
+		 	<p class="voice2">(Officer K) Distinct.</p>
+			<!--captions65-->
+			<p class="voice1">(Intercome) Dreadfully distinct.</p>
+			<!--captions66-->
+			<p class="voice2">(Officer K) Dreadfully distinct.</p>
+			<!--captions67-->
+			<p class="voice1">( Intercome) Dark.</p>
+			<!--captions68-->
+			<p class="voice2">(Officer K) Dark.</p>
+			<!--captions69-->
+			<p class="voice1">(Intercome) Within cells interlinked.</p>
+			<!--captions70-->
+			<p class="voice2">(Officer K) Within cells interlinked.</p>
+			<!--captions71-->
+			<p class="voice1">(Intercome) Withing one stem.</p>
+			<!--captions72-->
+			<p class="voice2">(Officer K) Withing one stem.</p>
+			<!--captions73-->
+			<p class="voice1">(Intercome) And dreadfully distinct.</p>
+			<!--captions74-->
+			<p class="voice2">(Officer K) And dreadfully distinct.</p>
+			<!--captions75-->
+			<p class="voice1">(Intercome) Against the dark.</p>
+			<!--captions76-->
+			<p class="voice2">(Officer K) Against the dark.</p>
+			<!--captions77-->
+			<p class="voice1">(Intercome) A tall white fountain played.</p>
+			<!--captions78-->
+			<p class="voice2">(Officer K) A tall white fountain played.</p>
+			<!--captions79-->
+			<p class="voice1">(Intercome) You're not even close to baseline.</p>
 
-		<!-- p5 -->
-		<p class="voice2">
-			interlinked within cells, interlinked within one stem.
-		</p>
-
-		<!-- p6 -->
-		<p class="voice3">
-			*Fuck off, skin-job!*
-		</p>
-
-		<!-- p7 -->
-		<p class="voice2">
-			And dreadfully distinct against the dark, a tall white fountain played...
-		</p>
-		<!-- p8 -->
-		<p class="voice1 cells">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			Have you ever been in an institution?
-		</p>
-		<p class="voice1 cells">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			Do they keep you in a cell?
-		</p>
-		<p class="voice1 cells">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			When you're not performing your duties, do they keep you in a little box?
-		</p>
-		<p class="voice1 cells">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1 interlinked">
-			interlinked.
-		</p>
-		<p class="voice2">
-			interlinked.
-		</p>
-		<p class="voice1">
-			What's it like to hold the hand of someone you love?
-		</p>
-		<p class="voice1 interlinked">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Did they teach you how to feel, finger to finger?
-		</p>
-		<p class="voice1 interlinked">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Do you long for having your heart interlinked?
-		</p>
-		<p class="voice1 interlinked">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Do you dream about being interlinked?
-		</p>
-		<p class="voice2">
-			interlinked.
-		</p>
-		<p class="voice1">
-			What's it like to hold your child in your arms?
-		</p>
-		<p class="voice1  interlinked">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Do you feel that there's a part of you that's missing?
-		</p>
-		<p class="voice1 interlinked">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Within cells interlinked.
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice1">
-			Why don't you say that three times: "within cells interlinked"
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice4">
-			We're done.
-		</p>
-		<p class="voice4">
-			Constant K.
-		</p>
-		<p class="voice4">
-			You can pick up your bonus.
-		</p>
-		<p class="voice2">
-			Thank you, sir.
-		</p>
+		<!-- =====================einde====================== -->
 
 
-<!-- "tweede scene vanaf 1 minuut 28" -->
+		<!-- ================================================ -->
+		<!-- 				Geluid effecten via javascript			 			-->
+		<!-- ================================================ -->
 
+			<!--captions80-->
+			<p class="soundcaption0">[Heavy drum sounds]</p>
+			<!--captions81-->
+			<p class="soundcaption1">[Alarmbuzzer]</p>
+			<!--captions82-->
+			<p class="soundcaption2">[High frequency Horn]</p>
+			<!--captions83-->
+			<p class="soundcaption3">[Low frequency Buzzer]</p>
+			<!--captions84-->
+			<p class="soundcaption4">[High frequency Buzzer]</p>
+			<!--captions85-->
+			<p class="soundcaption5">[Low frequency Buzzer]</p>
+			<!--captions86-->
+			<p class="soundcaption6">[High frequency Buzzer]</p>
+			<!--captions87-->
+			<p class="soundcaption7">[Low frequency Buzzer]</p>
+			<!--captions88-->
+			<p class="soundcaption8">[High frequency Buzzer]</p>
+			<!--captions89-->
+			<p class="soundcaption9">[High frequency tone keeps increasing]</p>
+			<!--captions90-->
+			<p class="soundcaption10">[Taunting music]</p>
 
-<p class="voice1">Cells</p>
-<p class="voice2">-Cells</p>
-<p class="voice1">Have you ever been in an institution. Cells</p>
-<p class="voice2">-Cells</p>
-<p class="voice1">When you're not performing your duties, do they keep you in a little box? Cells.</p>
-<p class="voice2">-Cells</p>
-<p class="voice1">Interlinked. What’s it like to hold the hand of someone you love?</p>
-<p class="voice1 interlinked">-Interlinked </p>
-<p class="voice2 interlinked">-Interlinked</p>
-<p class="voice1">Within cells interlinked</p>
-<p class="voice2">-Within cells interlinked</p>
-<p class="voice1">Dreadfully</p>
-<p class="voice2">-Dreadfully</p>
-<p class="voice1">What's it like to be filled with dread? Dreadfully</p>
-<p class="voice2">-Dreadfully</p>
-<p class="voice1">Do you like being separated from other people? Distinct</p>
-<p class="voice2">-Distinct</p>
-<p class="voice1">Dreadfully distinct</p>
-<p class="voice2">-Dreadfully distinct</p>
-<p class="voice1">Dark</p>
-<p class="voice2">-Dark</p>
-<p class="voice1">Within cells interlinked</p>
-<p class="voice2">-Within cells interlinked</p>
-<p class="voice1">Withing one stem</p>
-<p class="voice2">-Withing one stem</p>
-<p class="voice1">And dreadfully distinct</p>
-<p class="voice2">-And dreadfully distinct</p>
-<p class="voice1">Against the dark</p>
-<p class="voice2">-Against the dark</p>
-<p class="voice1">A tall white fountain played</p>
-<p class="voice2">- A tall white fountain played</p>
-<p class="voice1">You're not even close to baseline</p>
+			<!-- =====================einde====================== -->
 
 	</div>
+
 
 	<script src="https://www.youtube.com/iframe_api"></script>
 	<script>var captions = new Array();</script>
