--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Closed Captions]</title>
+	<title>Closed Captions</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://fonts.typotheque.com/WF-023273-010687.css">
 	<link rel="stylesheet" href="css.css">
@@ -217,8 +217,12 @@
 			<p class="soundcaption10">[Taunting music]</p>
 
 			<!-- =====================einde====================== -->
-
 	</div>
+
+<div class="soundsheader">
+	<p> Sounds</p>
+</div>
+
 
 
 	<script src="https://www.youtube.com/iframe_api"></script>
