--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -192,35 +192,38 @@
 		<!-- ================================================ -->
 		<!-- 				Geluid effecten via javascript			 			-->
 		<!-- ================================================ -->
+<div class="soundseffects">
 
 			<!--captions80-->
-			<p class="soundcaption0">[Heavy drum sounds]</p>
+			<p class="soundcaption0">[Drumming noice in the background]</p>
 			<!--captions81-->
-			<p class="soundcaption1">[Alarmbuzzer]</p>
+			<p class="soundcaption1">[Buzzing alarm]</p>
 			<!--captions82-->
-			<p class="soundcaption2">[High frequency Horn]</p>
+			<p class="soundcaption2">[High pitch siren]</p>
 			<!--captions83-->
-			<p class="soundcaption3">[Low frequency Buzzer]</p>
+			<p class="soundcaption3">[Slow Buzzing noice]</p>
 			<!--captions84-->
-			<p class="soundcaption4">[High frequency Buzzer]</p>
+			<p class="soundcaption4">[High pitched alarm]</p>
 			<!--captions85-->
-			<p class="soundcaption5">[Low frequency Buzzer]</p>
+			<p class="soundcaption5">[Buzzing alarm]</p>
 			<!--captions86-->
-			<p class="soundcaption6">[High frequency Buzzer]</p>
+			<p class="soundcaption6">[High pitched alarm]</p>
 			<!--captions87-->
-			<p class="soundcaption7">[Low frequency Buzzer]</p>
+			<p class="soundcaption7">[Slow Buzzing noice]</p>
 			<!--captions88-->
-			<p class="soundcaption8">[High frequency Buzzer]</p>
+			<p class="soundcaption8">[High pitched alarm]</p>
 			<!--captions89-->
-			<p class="soundcaption9">[High frequency tone keeps increasing]</p>
+			<p class="soundcaption9">[High pitched tone increasing]</p>
 			<!--captions90-->
-			<p class="soundcaption10">[Taunting music]</p>
+			<p class="soundcaption10">[Scaring sound in the background]</p>
 
 			<!-- =====================einde====================== -->
+</div>
+
 	</div>
 
 <div class="soundsheader">
-	<p> Sounds</p>
+	<p> Sounds effects</p>
 </div>
 
 
