--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -107,11 +107,11 @@
 			 <!--captions43-->
 			 <p class="voice2">(Officer K) Within cells interlinked.</p>
 			 <!--captions44-->
-			 <p class="voice4">(Intercome) We're done.</p>
+			 <p class="voice4">(Sir) We're done.</p>
 			 <!--captions45-->
-		   <p class="voice4">(Intercome) [sighs softly] Constant K.</p>
+		   <p class="voice4">(Sir) Constant K.....</p>
 			 <!--captions46-->
-			 <p class="voice4">(Intercome) You can pick up your bonus.</p>
+			 <p class="voice4">(Sir) You can pick up your bonus.</p>
 			 <!--captions47-->
 			 <p class="voice2">(Officer K) Thank you, sir.</p>
 
@@ -197,34 +197,34 @@
 			<!--captions80-->
 			<p class="soundcaption0">[Drumming noice in the background]</p>
 			<!--captions81-->
-			<p class="soundcaption1">[Buzzing alarm]</p>
+			<p class="soundcaption1">[BUZZING ALARM]</p>
 			<!--captions82-->
-			<p class="soundcaption2">[High pitch siren]</p>
+			<p class="soundcaption2">[HIGH PITCH SIREN]</p>
 			<!--captions83-->
 			<p class="soundcaption3">[Slow Buzzing noice]</p>
 			<!--captions84-->
-			<p class="soundcaption4">[High pitched alarm]</p>
+			<p class="soundcaption4">[HIGH PITCH ALARM]</p>
 			<!--captions85-->
 			<p class="soundcaption5">[Buzzing alarm]</p>
 			<!--captions86-->
-			<p class="soundcaption6">[High pitched alarm]</p>
+			<p class="soundcaption6">[HIGH PITCH ALARM]</p>
 			<!--captions87-->
 			<p class="soundcaption7">[Slow Buzzing noice]</p>
 			<!--captions88-->
-			<p class="soundcaption8">[High pitched alarm]</p>
+			<p class="soundcaption8">[HIGH PITCH ALARM]</p>
 			<!--captions89-->
 			<p class="soundcaption9">[High pitched tone increasing]</p>
 			<!--captions90-->
-			<p class="soundcaption10">[Scaring sound in the background]</p>
+			<p class="soundcaption10">[Creeping sound in the background]</p>
 
 			<!-- =====================einde====================== -->
 </div>
 
 	</div>
 
-<div class="soundsheader">
+<!-- <div class="soundsheader">
 	<p> Sounds effects</p>
-</div>
+</div> -->
 
 
 
