--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Closed Captions</title>
+	<title>Blade Runner [Closed Captions]</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://fonts.typotheque.com/WF-023273-010687.css">
 	<link rel="stylesheet" href="css.css">
