--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -101,11 +101,11 @@
 			 <!--captions40-->
 			 <p class="voice1">(Intercome) Why don't you say that three times: "within cells interlinked"</p>
 			 <!--captions41-->
-			 <p class="voice2">(Officer K) Within cells interlinked.</p>
+			 <p class="voice2 one">(Officer K) Within cells interlinked...</p>
 			 <!--captions42-->
-			 <p class="voice2">(Officer K) Within cells interlinked.</p>
+			 <p class="voice2 two">(Officer K) Within cells interlinked...</p>
 			 <!--captions43-->
-			 <p class="voice2">(Officer K) Within cells interlinked.</p>
+			 <p class="voice2 three">(Officer K) Within cells interlinked...</p>
 			 <!--captions44-->
 			 <p class="voice4">(Sir) We're done.</p>
 			 <!--captions45-->
@@ -160,7 +160,7 @@
 			<!--captions66-->
 			<p class="voice2">(Officer K) Dreadfully distinct.</p>
 			<!--captions67-->
-			<p class="voice1">( Intercome) Dark.</p>
+			<p class="voice1">(Intercome) Dark.</p>
 			<!--captions68-->
 			<p class="voice2">(Officer K) Dark.</p>
 			<!--captions69-->
@@ -195,13 +195,13 @@
 <div class="soundseffects">
 
 			<!--captions80-->
-			<p class="soundcaption0">[Drumming noice in the background]</p>
+			<p class="soundcaption0">[Drumming noise in the background]</p>
 			<!--captions81-->
 			<p class="soundcaption1">[BUZZING ALARM]</p>
 			<!--captions82-->
 			<p class="soundcaption2">[HIGH PITCH SIREN]</p>
 			<!--captions83-->
-			<p class="soundcaption3">[Slow Buzzing noice]</p>
+			<p class="soundcaption3">[Slow Buzzing noise]</p>
 			<!--captions84-->
 			<p class="soundcaption4">[HIGH PITCH ALARM]</p>
 			<!--captions85-->
@@ -209,7 +209,7 @@
 			<!--captions86-->
 			<p class="soundcaption6">[HIGH PITCH ALARM]</p>
 			<!--captions87-->
-			<p class="soundcaption7">[Slow Buzzing noice]</p>
+			<p class="soundcaption7">[Slow Buzzing noise]</p>
 			<!--captions88-->
 			<p class="soundcaption8">[HIGH PITCH ALARM]</p>
 			<!--captions89-->
